

==============================
Release 2.4.0.X
==============================
2014-12-12    WindowFinder: Add WrongSetupException to be thrown if an assembly is missing which prevents CodedUI to run
2014-07-31    Update project to .net 4.5.1


==============================
Release 2.2.0.X
==============================
2014-07-15    BasicElements: Add possibility to make a shadow copy of each basic element
              UI: Add possibility to read the full UI tree as a shadow copy
              BasicWindow: GetChildWindows was return windows even they are not the child windows
2014-07-13    BasicWindowBase: Implement Equals with use of the NativeWindowHandle
              Do: Add possibility to repeat Do actions
2014-07-12    BasicWindowBase: Add possibility to get the parent window of another window
              BasicWindowBase: Add possibility to throw an exception if the parent window is not available
2014-07-11    WindowFinder: Fix missing usage of the Is parameter
              WindowFinder: Use different WinAPI method to determine the child and parent relationship
2014-07-10    CodedUIEnvironment: Add settings for defaults in CombinableAnd and CombinableWith
              WindowFinder: Add with Is the possibility to find windows which has a specific relation to another object
2014-07-09    DynamicSleep: Add DynamicSleep
              CodedUIEnvironment: Add CodedUIEnvironment object for global coded UI settings
2014-07-08    ElementFinder: Add possibility to change the application blacklist; 
2014-07-07    ElementFinder: Add tab to show a suggested basic element
              ElementFinder: Add reading BasicElement properties; 
              ElementFinder: Add notification to the bottom of the suggest page; 
2014-07-06    ElementFinder: Add behavior shortcuts and let the user change them
2014-07-05    ElementFinder: Style controls
2014-07-04    ElementFinder: Add ElementObserver to detect if an element disappears to close the highlighter automatically