@@ -4,6 +4,7 @@
 Release 2.4.0.X
 ==============================
 2014-12-12    WindowFinder: Add WrongSetupException to be thrown if an assembly is missing which prevents CodedUI to run
+              UI: Add possibility to search with the setting that the element have to be usable (visible and enabled)
 2014-07-31    Update project to .net 4.5.1
 
 
